Fix alignment of "next" button

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 *******************/
 .navbar {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     background-color: rgb(224, 224, 224);
     padding: 0.5rem;
@@ -18,6 +18,10 @@
 .navbar-right {
     display: flex;
     align-items: center;
+}
+
+.navbar.align-right {
+    justify-content: flex-end;
 }
 
 /******************
